add checkpassword
