# src/app/controllers/Auth.js
@@ -1,9 +1,12 @@
 const bcrypt = require('bcryptjs');
+
 const User = require('../models/User');
+
+const BCRYPT_ROUND = 10;
 
 const hashPassword = (password) =>
   new Promise((res, rej) => {
-    bcrypt.genSalt(10, (errSalt, salt) => {
+    bcrypt.genSalt(BCRYPT_ROUND, (errSalt, salt) => {
       if (errSalt) rej(errSalt);
       bcrypt.hash(password, salt, (errHash, hash) => {
         if (errHash) rej(errHash);
@@ -11,6 +14,28 @@ const hashPassword = (password) =>
       });
     });
   });
+const checkPassword = (password, hash) =>
+  new Promise((res, rej) => {
+    bcrypt.compare(password, hash, (err, success) => {
+      if (err) rej(err);
+      res(success);
+    });
+  });
+
+const CheckPassword = async (req, res) => {
+  const { username, password } = req.body;
+  const user = await User.query().findOne({ username });
+
+  req.log.trace({ reqBody: req.body, user: user || 'NOT FOUND' });
+
+  if (user) {
+    const success = await checkPassword(password, user.password);
+    req.log.trace({ checkPassword: success });
+    if (success) return res.status(200).send();
+  }
+
+  res.status(404).send();
+};
 
 module.exports.RegisterUser = async function RegisterUser(req, res) {
   const { username, password, email, name } = req.body;
@@ -23,3 +48,5 @@ module.exports.RegisterUser = async function RegisterUser(req, res) {
   });
   res.xsend('success', req.body);
 };
+
+module.exports.CheckPassword = CheckPassword;
